--- a/theme.toml
+++ b/theme.toml
@@ -1,8 +1,7 @@
-name = "Academic"
+name = "Nhat Hai"
 license = "MIT"
-licenselink = "https://github.com/wowchemy/starter-academic/blob/master/LICENSE.md"
 description = "Use the website builder to personalize your academic resumé with widgets and deploy with one click! Fully customize your site with themes, plugins, and language packs."
-homepage = "https://wowchemy.com"
+homepage = "https://nhathai.netlify.app/"
 min_version = "0.73"
 tags = ["widgets",
         "resume",
@@ -39,8 +38,8 @@ features = ["page builder", "widgets", "themes", "search", "research publication
             "blog", "create courses", "talks", "events", "slides", "gallery", "contact form"]
 
 [author]
-  name = "George Cushen"
-  homepage = "https://georgecushen.com"
+  name = "NhatHai"
+  homepage = "https://nhathai.netlify.app/"
 
 # If porting an existing theme
 [original]
